- Add experimental support for HAT (Zero) Brick (SPI connected Bricklets) on
  Windows 10 IoT Core, disabled by default due to missing HAT detection
- Notarize Brick Daemon app to make it ready for macOS 10.15

2020-11-12: 2.4.2 (1e6411a)
- Properly shutdown subsystems on Ctrl+C instead of abruptly exiting on Windows
- Rotate persistent log file on Windows and limit its total size to 25 MB
- Add commandline options to override log and config file location on Windows
- Colorize Log Viewer live log messages on Windows
- Reword Log Viewer messages to be less ambiguous on Windows
- Add build option to work without a device file manager such as udevd on Linux
- Allow to handle more then 6 USB devices on Windows
- Use BCM2835 library for SPI connected Bricklets on Raspberry Pi to improve
  performance and work around SPI chip select conflict between Linux kernel 5.4
  and HAT Brick firmware < 2.0.2
- Improve log messages related to HAT (Zero) Brick on Linux
- Fix SPI hardware chip select usage on Linux
- Allow to fully static link brickd for Docker container usage on Linux
- Switch Debian package build to debhelper and drop SysV init support
- Improve USB transfer error logging and stall error recovery

2020-12-01: 2.4.3 (2f57246)
- Fix SPI clock for HAT (Zero) Brick on Linux, if core_freq differs from 250 MHz
- Add config option to override SPI backend detection

2023-01-16: 2.4.4 (889c425)
- Add menu entry to clear Live Log in Windows Log Viewer
- Abort delayed USB stall recovery if device was removed in the meantime
- Add rate limit for Bricklet error messages
- Increase libusb requirement from 1.0.6 to 1.0.20
- Allow to disable mesh gateway
- Update bundled libusb to 1.0.26.11755 on Windows (Windows Vista or newer
  required) and macOS

2023-11-30: 2.4.5 (f841c6b)
- Add Raspberry Pi 5 support for HAT (Zero) Brick
- Fix rare crash in initial USB device scan

<unknown>: 2.4.6 (<unknown>)
- Adapt to Raspberry Pi 5 GPIO pin numbering changes