@@ -7,6 +7,6 @@
 	compress
 	delaycompress
 	postrotate
-		pkill -F /var/run/brickd.pid -L -HUP brickd >/dev/null 2>&1 || pkill -HUP brickd >/dev/null 2>&1 || true
+		pkill -F /run/brickd.pid -L -HUP brickd >/dev/null 2>&1 || pkill -HUP brickd >/dev/null 2>&1 || true
 	endscript
 }
