@@ -67,7 +67,7 @@ for further details. Can be overridden using the --config-file option.
 .IP "\fI/var/log/brickd.log\fR" 4
 The system wide default daemon-mode log file. Can be overridden using the optional
 <log-file> argument to the --daemon option.
-.IP "\fI/var/run/brickd.pid\fR" 4
+.IP "\fI/run/brickd.pid\fR" 4
 The system wide default PID file. Can be overridden using the --pid-file option.
 .SS "When run as \fBnon-root\fP"
 .IP "\fI~/.brickd/brickd.conf\fR" 4
